--- a/client/src/components/sign/login/login.css
+++ b/client/src/components/sign/login/login.css
@@ -14,10 +14,12 @@
 }
 
 .log {
-  padding: 0.75rem;
-  max-width: 32rem;
+  padding: 80px;
+  max-width: 40rem;
   margin: 0 auto;
-  transform: translateY(110PX);
+  transform: translateY(100px);
+  background-color: var(--whiteColor);
+  border-radius: 2rem;
 }
 .log .logtext {
   margin-top: 1.75rem;
@@ -57,10 +59,12 @@
 .log .formtxt .btnlog:hover.btnlog {
   background: var(--mm);
 }
-.log .txtsig {
+.log .formtxt .txtsig {
   display: flex;
   margin-top: 1.25rem;
   gap: 0.5rem;
   color: black;
-  transform: translateY(50PX);
+}
+.log .formtxt .txtsig span {
+  color: black;
 }/*# sourceMappingURL=login.css.map */
