--- a/client/src/components/sign/login/login.scss
+++ b/client/src/components/sign/login/login.scss
@@ -14,10 +14,13 @@
 }
 
 .log {
-    padding: 0.75rem;
-    max-width: 32rem;
+    padding: 80px;
+    max-width: 40rem;
     margin: 0 auto;
-    transform: translateY(110PX);
+    transform: translateY(100px);
+    background-color: var(--whiteColor);
+    border-radius: 2rem;
+    
     .logtext {
         margin-top: 1.75rem;
         margin-bottom: 1.75rem;
@@ -63,15 +66,18 @@
             }
 
         }
+        .txtsig{
+            display: flex; 
+            margin-top: 1.25rem; 
+            gap: 0.5rem; 
+            color: black;
+            span {
+                color: black;
+            }
+    
+        }
 
     }
-    .txtsig{
-        display: flex; 
-        margin-top: 1.25rem; 
-        gap: 0.5rem; 
-        color: black;
-
-        transform: translateY(50PX);
-    }
+  
 
 }
