--- a/client/src/components/sign/login/login.css
+++ b/client/src/components/sign/login/login.css
@@ -10,40 +10,48 @@
   --inputColor: rgb(239, 239, 239);
   --bodyColor: rgb(240, 240, 240);
   --cardBG: rgb(225, 225, 225);
-  --mm: hsl(155, 51%, 45%);
+  --mm: hsl(155, 70%, 30%);
+  --mmm: hsl(155, 44%, 35%);
+  --yyy: hsl(34, 65%, 57%);
+  --w: hsl(140, 41%, 60%);
 }
 
-.log {
-  padding: 80px;
+.bg {
+  padding: 100px;
+  background: hsl(140, 41%, 60%);
+}
+.bg .log {
+  padding: 90px;
   max-width: 40rem;
   margin: 0 auto;
-  transform: translateY(100px);
-  background-color: var(--whiteColor);
+  transform: translateY(10px);
+  background-color: var(--whiteColordeam);
   border-radius: 2rem;
 }
-.log .logtext {
+.bg .log .logtext {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
   font-size: 1.875rem;
   line-height: 2.25rem;
   font-weight: 600;
   text-align: center;
-  transform: translateY(20px);
+  color: var(--blackColor);
+  transform: translateY(-10px);
 }
-.log .formtxt {
-  transform: translateY(50PX);
+.bg .log .formtxt {
+  transform: translateY(20PX);
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-.log .formtxt .inputtxt {
+.bg .log .formtxt .inputtxt {
   padding: 0.75rem;
   border-radius: 1.5rem;
   outline: none;
   border-color: rgb(76, 76, 76);
   border: none;
 }
-.log .formtxt .btnlog {
+.bg .log .formtxt .btnlog {
   padding: 0.75rem;
   border-radius: 1.5rem;
   background: var(--gradientColor);
@@ -56,15 +64,16 @@
   outline: none;
   cursor: pointer;
 }
-.log .formtxt .btnlog:hover.btnlog {
+.bg .log .formtxt .btnlog:hover.btnlog {
   background: var(--mm);
 }
-.log .formtxt .txtsig {
+.bg .log .formtxt .txtsig {
   display: flex;
   margin-top: 1.25rem;
   gap: 0.5rem;
   color: black;
+  transform: translateX(100px);
 }
-.log .formtxt .txtsig span {
-  color: black;
+.bg .log .formtxt .txtsig span {
+  color: rgb(255, 175, 55);
 }/*# sourceMappingURL=login.css.map */
