--- a/client/src/components/sign/login/login.scss
+++ b/client/src/components/sign/login/login.scss
@@ -10,16 +10,23 @@
     --inputColor: rgb(239, 239, 239);
     --bodyColor: rgb(240, 240, 240);
     --cardBG: rgb(225, 225, 225);
-    --mm: hsl(155, 51%, 45%);
+    --mm: hsl(155, 70%, 30%);
+    --mmm: hsl(155, 44%, 35%);
+    --yyy: hsl(34, 65%, 57%);
+    --w: hsl(140, 41%, 60%);
 }
 
+.bg{
+    padding:100px ;
+    background: hsl(140, 41%, 60%);
 .log {
-    padding: 80px;
+    padding: 90px;
     max-width: 40rem;
     margin: 0 auto;
-    transform: translateY(100px);
-    background-color: var(--whiteColor);
+    transform: translateY(10px);
+    background-color: var(--whiteColordeam);
     border-radius: 2rem;
+
     
     .logtext {
         margin-top: 1.75rem;
@@ -28,12 +35,13 @@
         line-height: 2.25rem;
         font-weight: 600;
         text-align: center;
-        transform: translateY(20px);
+        color: var(--blackColor);
+        transform: translateY(-10px);
 
     }
 
     .formtxt {
-        transform: translateY(50PX);
+        transform: translateY(20PX);
         display: flex;
         flex-direction: column;
         gap: 1rem;
@@ -71,8 +79,10 @@
             margin-top: 1.25rem; 
             gap: 0.5rem; 
             color: black;
+            transform: translateX(100px);
             span {
-                color: black;
+                color: rgb(255, 175, 55);
+                
             }
     
         }
@@ -80,4 +90,5 @@
     }
   
 
+}
 }
