Create sign in API route

--- a/client/src/components/homecomp/Navbar/navbar.scss
+++ b/client/src/components/homecomp/Navbar/navbar.scss
@@ -20,7 +20,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: var(--whiteColordeam);
+    background-color: var(--whiteColor);
     width: 100%;
     padding: 1rem;
     z-index: 1000;
