--- a/client/src/components/sign/Navbar2/navbar2.css
+++ b/client/src/components/sign/Navbar2/navbar2.css
@@ -11,6 +11,7 @@
   --bodyColor: rgb(240, 240, 240);
   --cardBG: rgb(225, 225, 225);
   --mm: hsl(155, 70%, 30%);
+  --mmm: hsl(155, 38%, 41%);
 }
 
 header {
@@ -25,7 +26,7 @@ header {
   box-shadow: 0 2px 4px rgba(2, 15, 29, 0.242);
 }
 header .logo {
-  color: var(--blackColor);
+  color: var(--mmm);
   font-weight: 600;
   cursor: pointer;
   align-items: center;
@@ -33,17 +34,17 @@ header .logo {
 }
 header .logo .icon {
   font-size: 25px;
-  color: var(--blackColor);
+  color: var(--mmm);
   transform: translateY(5px);
 }
 header .logo .yt {
   font-size: 20px;
   font-weight: 400;
-  color: var(--mm);
+  color: var(--mmm);
 }
 header .logo .yt .ic {
   transform: translateY(3px);
-  color: var(mm);
+  color: var(--mmm);
 }
 
 @media screen and (min-width: 769px) {
