--- a/client/src/components/sign/login/login.css
+++ b/client/src/components/sign/login/login.css
@@ -11,44 +11,44 @@
   --bodyColor: rgb(240, 240, 240);
   --cardBG: rgb(225, 225, 225);
   --mm: hsl(155, 70%, 30%);
-  --mmm: hsl(155, 44%, 35%);
+  --mmm: hsl(155, 38%, 41%);
   --yyy: hsl(34, 65%, 57%);
-  --w: hsl(140, 41%, 60%);
+  --w: hsl(0, 0%, 93%);
 }
 
 .bg {
   padding: 100px;
-  background: hsl(140, 41%, 60%);
+  background: white;
 }
 .bg .log {
   padding: 90px;
-  max-width: 40rem;
+  max-width: 38rem;
   margin: 0 auto;
   transform: translateY(10px);
-  background-color: var(--whiteColordeam);
+  background-color: var(--mmm);
   border-radius: 2rem;
 }
 .bg .log .logtext {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
-  font-size: 1.875rem;
+  font-size: 2.5rem;
   line-height: 2.25rem;
   font-weight: 600;
   text-align: center;
-  color: var(--blackColor);
-  transform: translateY(-10px);
+  color: white;
+  transform: translateY(-30px);
 }
 .bg .log .formtxt {
-  transform: translateY(20PX);
+  transform: translateY(10PX);
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 .bg .log .formtxt .inputtxt {
-  padding: 0.75rem;
+  padding: 0.8rem;
   border-radius: 1.5rem;
   outline: none;
-  border-color: rgb(76, 76, 76);
+  background: var(--whiteColor);
   border: none;
 }
 .bg .log .formtxt .btnlog {
@@ -65,15 +65,15 @@
   cursor: pointer;
 }
 .bg .log .formtxt .btnlog:hover.btnlog {
-  background: var(--mm);
+  background: var(--yyy);
 }
 .bg .log .formtxt .txtsig {
   display: flex;
   margin-top: 1.25rem;
   gap: 0.5rem;
-  color: black;
+  color: white;
   transform: translateX(100px);
 }
 .bg .log .formtxt .txtsig span {
-  color: rgb(255, 175, 55);
+  color: var(--yyy);
 }/*# sourceMappingURL=login.css.map */
