--- a/client/src/components/sign/Register/register.css
+++ b/client/src/components/sign/Register/register.css
@@ -16,11 +16,11 @@
   --w: hsl(0, 0%, 93%);
 }
 
-.bgl {
-  padding: 109px;
+.bg {
+  padding: 80px;
   background: rgb(209, 226, 202);
 }
-.bgl .logl {
+.bg .log {
   padding: 90px;
   max-width: 38rem;
   margin: 0 auto;
@@ -28,7 +28,7 @@
   background-color: var(--mmm);
   border-radius: 2rem;
 }
-.bgl .logl .logtextl {
+.bg .log .logtext {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
   font-size: 2.5rem;
@@ -38,20 +38,20 @@
   color: white;
   transform: translateY(-30px);
 }
-.bgl .logl .formtxtl {
+.bg .log .formtxt {
   transform: translateY(10PX);
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-.bgl .logl .formtxtl .inputtxtl {
+.bg .log .formtxt .inputtxt {
   padding: 0.8rem;
   border-radius: 1.5rem;
   outline: none;
   background: var(--whiteColor);
   border: none;
 }
-.bgl .logl .formtxtl .btnlogl {
+.bg .log .formtxt .btnlog {
   padding: 0.75rem;
   border-radius: 1.5rem;
   background: var(--gradientColor);
@@ -64,16 +64,16 @@
   outline: none;
   cursor: pointer;
 }
-.bgl .logl .formtxtl .btnlogl:hover.btnlog {
+.bg .log .formtxt .btnlog:hover.btnlog {
   background: var(--yyy);
 }
-.bgl .logl .formtxtl .txtsigl {
+.bg .log .formtxt .txtsig {
   display: flex;
   margin-top: 1.25rem;
   gap: 0.5rem;
   color: white;
-  transform: translateX(80px);
+  transform: translateX(100px);
 }
-.bgl .logl .formtxtl .txtsigl span {
+.bg .log .formtxt .txtsig span {
   color: var(--yyy);
-}/*# sourceMappingURL=login.css.map */
+}/*# sourceMappingURL=register.css.map */
