--- a/client/src/components/sign/Register/register.scss
+++ b/client/src/components/sign/Register/register.scss
@@ -16,10 +16,10 @@
     --w: hsl(0, 0%, 93%);
 }
 
-.bgl{
-    padding: 109px ;
+.bg{
+    padding:80px ;
     background: rgb(209, 226, 202);
-.logl{
+.log {
     padding: 90px ;
     max-width: 38rem;
     margin: 0 auto;
@@ -28,7 +28,7 @@
     border-radius: 2rem;
 
     
-    .logtextl{
+    .logtext {
         margin-top: 1.75rem;
         margin-bottom: 1.75rem;
         font-size: 2.5rem;
@@ -40,7 +40,7 @@
 
     }
 
-    .formtxtl{
+    .formtxt {
         transform: translateY(10PX);
         display: flex;
         flex-direction: column;
@@ -49,7 +49,7 @@
         
         
 
-        .inputtxtl{
+        .inputtxt {
             padding: 0.8rem;
             border-radius : 1.5rem;
             outline: none;
@@ -59,7 +59,7 @@
             border: none;
         }
 
-        .btnlogl{
+        .btnlog {
             padding: 0.75rem;
             border-radius : 1.5rem;
             background: var(--gradientColor);
@@ -76,12 +76,12 @@
             }
 
         }
-        .txtsigl{
+        .txtsig{
             display: flex; 
             margin-top: 1.25rem; 
             gap: 0.5rem; 
             color: white;
-            transform: translateX(80px);
+            transform: translateX(100px);
             span {
                 color: var(--yyy);
                 
