--- a/client/src/components/sign/login/login.scss
+++ b/client/src/components/sign/login/login.scss
@@ -90,7 +90,14 @@
         }
 
     }
-  
+    .mt{
+    color: white;
+    font-weight: 600;
+    text-align: center;
+    transform: translateY(30px);
+
+    
+     }
 
 }
 }
