--- a/client/src/components/homecomp/Welcome/welcome.scss
+++ b/client/src/components/homecomp/Welcome/welcome.scss
@@ -53,17 +53,22 @@
         
         .textDiv{
             padding: 2.5rem 0;
+            margin-top: -20px;
             .smallText{
-                font-size: 20px;
+                font-size: 40px;
                 text-transform: uppercase;
-                transform: translateY(-50px);
+                transform: translateY(-90px);
                 
             }
             
             .welcomeTitle{
                 position: relative;
-                font-size: 1.8rem;
-                transform: translateY(-50px);
+                font-size: 30px;
+                transform: translateY(-70px);
+                .welcomeTitl{
+                    font-size: 30px;
+                transform: translateY(10px);
+                }
             }
         }
 
