--- a/client/src/components/sign/Register/register.css
+++ b/client/src/components/sign/Register/register.css
@@ -17,16 +17,16 @@
 }
 
 .bg {
-  padding: 76px;
+  padding: 40px;
   background: rgb(209, 226, 202);
 }
 .bg .log {
   padding: 90px;
   max-width: 38rem;
   margin: 0 auto;
-  transform: translateY(-10px);
   background-color: var(--mmm);
   border-radius: 2rem;
+  border: 4px solid white;
 }
 .bg .log .logtext {
   margin-top: 1.75rem;
