--- a/client/src/components/sign/login/login.css
+++ b/client/src/components/sign/login/login.css
@@ -17,7 +17,7 @@
 }
 
 .bgl {
-  padding: 109px;
+  padding: 73px;
   background: rgb(209, 226, 202);
 }
 .bgl .logl {
@@ -27,6 +27,7 @@
   transform: translateY(-10px);
   background-color: var(--mmm);
   border-radius: 2rem;
+  border: 4px solid white;
 }
 .bgl .logl .logtextl {
   margin-top: 1.75rem;
