--- a/client/src/components/sign/login/login.scss
+++ b/client/src/components/sign/login/login.scss
@@ -17,7 +17,7 @@
 }
 
 .bgl{
-    padding: 109px ;
+    padding: 73px ;
     background: rgb(209, 226, 202);
 .logl{
     padding: 90px ;
@@ -26,6 +26,7 @@
     transform: translateY(-10px);
     background-color: var(--mmm);
     border-radius: 2rem;
+    border: 4px solid white;
 
     
     .logtextl{
