--- a/client/src/components/sign/oath/oath.css
+++ b/client/src/components/sign/oath/oath.css
@@ -21,7 +21,6 @@
   padding: 0.75rem;
   border-radius: 1.5rem;
   background: var(--gradientColorm);
-  text-transform: uppercase;
   font-size: 700;
   font-size: 1rem;
   font-weight: 600;
@@ -29,6 +28,11 @@
   border: none;
   outline: none;
   cursor: pointer;
+}
+.btnoath .m {
+  transform: translateY(4px);
+  font-size: 20px;
+  margin-right: 5px;
 }
 .btnoath:hover.btnlog {
   background: var(--yyy);
