--- a/client/src/pages/pagescss/profile.scss
+++ b/client/src/pages/pagescss/profile.scss
@@ -129,6 +129,14 @@
 
 
             }
+
+        }
+        .uper{
+            color: #bebebe; 
+            font-weight: 500;
+            font-size: 20px;;
+            align-self: center; 
+            transform: translateY(-430px)translateX(380px);
         }
     }
 
