--- a/client/src/components/sign/oath/oath.scss
+++ b/client/src/components/sign/oath/oath.scss
@@ -15,6 +15,8 @@
     --yyy: hsl(34, 65%, 57%);
     --w: hsl(0, 0%, 93%);
     --gradientColorm: linear-gradient(to right, hsl(199, 100%, 41%), hsl(199, 100%, 43%));
+    --yyyy: hsl(199, 49%, 61%);
+    
 }
 .btnoath {
     padding: 0.75rem;
