--- a/client/src/pages/pagescss/profile.css
+++ b/client/src/pages/pagescss/profile.css
@@ -11,6 +11,8 @@
   --bodyColor: rgb(240, 240, 240);
   --cardBG: rgb(225, 225, 225);
   --mm: hsl(155, 51%, 45%);
+  --gradientColorm: linear-gradient(to right, hsl(199, 100%, 41%), hsl(199, 100%, 43%));
+  --yyyy: hsl(199, 50%, 53%);
 }
 
 .profsec {
@@ -19,9 +21,9 @@
 .profsec .proff {
   padding: 20px;
   max-width: 70rem;
-  max-height: 33rem;
+  max-height: 31rem;
   margin: 0 auto;
-  transform: translateY(26%);
+  transform: translateY(34%);
   background-color: var(--mmm);
   border-radius: 2rem;
   border: 3px solid white;
@@ -38,7 +40,7 @@
   transform: translateY(60px);
 }
 .profsec .proff .profform {
-  transform: translateY(10PX);
+  transform: translateY(-20PX);
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -49,10 +51,10 @@
   margin-right: 0rem;
   align-self: center;
   border-radius: 50%;
-  width: 7.5rem;
+  width: 7.6rem;
   height: 7.5rem;
   cursor: pointer;
-  transform: translateY(-120px);
+  transform: translateY(-100px);
   border: 3px solid white;
 }
 .profsec .proff .profform .yh {
@@ -96,18 +98,25 @@
 .profsec .proff .proft {
   display: flex;
   margin-top: 1.25rem;
-  justify-content: space-between;
-  transform: translateY(-40px);
+  transform: translateY(5px);
 }
 .profsec .proff .proft .proftx {
-  cursor: pointer;
-  color: white;
-  margin-right: 13.5rem;
-  margin-left: 14rem;
+  padding: 0.75rem;
+  border-radius: 1.5rem;
+  background: var(--gradientColorm);
+  text-transform: uppercase;
+  font-size: 700;
+  font-size: 1rem;
   font-weight: 600;
-  transition: -webkit-text-decoration 0.3s ease;
-  transition: text-decoration 0.3s ease;
-  transition: text-decoration 0.3s ease, -webkit-text-decoration 0.3s ease;
+  transform: translateX(230px) translateY(-80px);
+  color: white;
+  border: none;
+  outline: none;
+  width: 40rem;
+  cursor: pointer;
+}
+.profsec .proff .proft .proftx:hover.proftx {
+  background: var(--yyyy);
 }
 .profsec .proff .uper {
   color: #bebebe;
