--- a/client/src/pages/pagescss/profile.scss
+++ b/client/src/pages/pagescss/profile.scss
@@ -11,6 +11,8 @@
     --bodyColor: rgb(240, 240, 240);
     --cardBG: rgb(225, 225, 225);
     --mm: hsl(155, 51%, 45%);
+    --gradientColorm: linear-gradient(to right, hsl(199, 100%, 41%), hsl(199, 100%, 43%));
+    --yyyy: hsl(199, 50%, 53%);
 }
 
 .profsec {
@@ -20,9 +22,9 @@
     .proff {
            padding: 20px;
         max-width: 70rem;
-        max-height: 33rem;
+        max-height: 31rem;
         margin: 0 auto;
-        transform: translateY(26%);
+        transform: translateY(34%);
         background-color: var(--mmm);
         border-radius: 2rem;
         border: 3px solid white;
@@ -41,7 +43,7 @@
         }
 
         .profform {
-            transform: translateY(10PX);
+            transform: translateY(-20PX);
             display: flex;
             flex-direction: column;
             gap: 1rem;
@@ -52,10 +54,10 @@
                 margin-right: 0rem;
                 align-self: center;
                 border-radius: 50%;
-                width: 7.5rem;
+                width: 7.6rem;
                 height: 7.5rem;
                 cursor: pointer;
-                transform: translateY(-120px);
+                transform: translateY(-100px);
                 border: 3px solid white;
                 
 
@@ -115,19 +117,27 @@
         .proft {
             display: flex;
             margin-top: 1.25rem;
-            justify-content: space-between;
-            transform: translateY(-40px);
+            
+            transform: translateY(5px);
 
             .proftx {
                 
-                cursor: pointer;
-                color: white;
-                margin-right:13.5rem ;
-                margin-left: 14rem;
+                padding: 0.75rem;
+                border-radius : 1.5rem;
+                background: var(--gradientColorm);
+                text-transform: uppercase;
+                font-size: 700;
+                font-size: 1rem;
                 font-weight: 600;
-                transition: text-decoration 0.3s ease;
-
-
+                transform: translateX(230px) translateY(-80px);
+                color: white;
+                border: none;
+                outline: none;
+                width: 40rem;
+                cursor: pointer;
+                &:hover.proftx{
+                    background: var(--yyyy);
+                }
             }
 
         }
