--- a/client/src/components/usercomp/navuser.css
+++ b/client/src/components/usercomp/navuser.css
@@ -20,6 +20,7 @@ header {
   justify-content: space-between;
   background-color: var(--whiteColor);
   width: 100%;
+  height: 11%;
   padding: 1rem;
   z-index: 1000;
   box-shadow: 0 3px 4px rgba(2, 15, 29, 0.242);
