--- a/client/src/components/posts/createpost.css
+++ b/client/src/components/posts/createpost.css
@@ -16,30 +16,34 @@
 .createpostcard {
   box-shadow: 3px 3px 4px rgba(140, 140, 141, 0.549);
   border: 50px;
-  margin: auto;
   transform: translate(90%, 50%);
   width: 35%;
-  height: 25%;
+  height: 30%;
   position: absolute;
   border-radius: 3rem;
   background: white;
 }
 .createpostcard .formpost .posttext {
-  width: 280%;
+  width: 90%;
   border: none;
   height: 110px;
   font-size: 16px;
   resize: vertical;
-  transform: translate(25px, 0px);
+  transform: translate(25px, 10px);
   box-sizing: border-box;
-  border-bottom: 1.6px solid var(--greytext);
 }
 .createpostcard .formpost .picpost {
-  font-size: 20px;
-  transform: translate(380px, 4px);
+  font-size: 17px;
+  transform: translate(40px, 60px);
   font-weight: 500;
   color: var(--mm);
   cursor: pointer;
+}
+.createpostcard .formpost .picpost .tagimg {
+  height: 35px;
+  width: 35px;
+  border: dotted var(--greytext);
+  transform: translate(20rem, 0.1rem);
 }
 .createpostcard .formpost .btnpost {
   padding: 0.6rem 1.5rem;
@@ -50,9 +54,15 @@
   cursor: pointer;
   color: white;
   font-weight: 600;
-  font-size: 12px;
-  transform: translate(400PX);
+  font-size: 15px;
+  transform: translate(25.9rem, 1.1rem);
 }
 .createpostcard .formpost .btnpost:hover {
   background: var(--mm);
+}
+.createpostcard .selected {
+  width: 50px;
+  height: 50px;
+  transform: translate(18rem, -30px);
+  border-radius: 20rem;
 }/*# sourceMappingURL=createpost.css.map */
