--- a/client/src/components/posts/createpost.css
+++ b/client/src/components/posts/createpost.css
@@ -11,18 +11,18 @@
   --bodyColor: rgb(240, 240, 240);
   --cardBG: rgb(225, 225, 225);
   --mm: hsl(155, 51%, 45%);
-  --mmm: hsl(156, 29%, 50%);
+  --mmm: hsl(155, 27%, 45%);
   --mmy: hsl(43, 100%, 43%);
 }
 
 .postsec .createpostcard {
   box-shadow: 3px 3px 4px rgba(140, 140, 141, 0.549);
-  border: 1.7px solid var(--mm);
+  border: 1.7px solid var(--whiteColor);
   transform: translate(28rem, 7rem);
   width: 38rem;
   height: 13.2rem;
   border-radius: 2.3rem;
-  background: white;
+  background: var(--mm);
 }
 .postsec .createpostcard .postpicname {
   height: 4.5rem;
@@ -33,7 +33,7 @@
   height: 50px;
   width: 50px;
   transform: translate(0.5rem, 1.1rem);
-  border: 2.5px solid var(--mm);
+  border: 2px solid var(--whiteColor);
 }
 .postsec .createpostcard .formpost .posttext {
   width: 88%;
@@ -45,6 +45,16 @@
   box-sizing: border-box;
   border-radius: 0.5rem;
   outline: none;
+  background: var(--mm);
+  color: white;
+}
+.postsec .createpostcard .formpost .posttext::-moz-placeholder {
+  color: white;
+  font-weight: 400;
+}
+.postsec .createpostcard .formpost .posttext::placeholder {
+  color: white;
+  font-weight: 400;
 }
 .postsec .createpostcard .formpost .postpub {
   border-top: solid 1px var(--greytext);
@@ -53,11 +63,8 @@
 .postsec .createpostcard .formpost .postpub .picpost {
   font-size: 25px;
   transform: translate(28rem, 0.45rem);
-  color: var(--mm);
+  color: var(--whiteColor);
   cursor: pointer;
-}
-.postsec .createpostcard .formpost .postpub .picpost:hover {
-  color: var(--mmm);
 }
 .postsec .createpostcard .formpost .postpub .btnpost {
   padding: 0.6rem 1.5rem;
@@ -84,6 +91,6 @@
   width: 50px;
   height: 50px;
   transform: translate(24rem, -7.15rem);
-  border: dotted var(--mm);
+  border: dotted var(--whiteColor);
   border-radius: 1rem;
 }/*# sourceMappingURL=createpost.css.map */
