--- a/client/src/components/posts/getpost.scss
+++ b/client/src/components/posts/getpost.scss
@@ -10,7 +10,7 @@
     --inputColor: rgb(239, 239, 239);
     --bodyColor: rgb(240, 240, 240);
     --cardBG: rgb(225, 225, 225);
-    --mm: hsl(155, 70%, 30%);
+    --mm: hsl(155, 27%, 45%);
     --cardHover: rgba(255, 255, 255);
     --mmm: hsl(155, 51%, 45%);
     --mmy: hsl(43, 100%, 43%);
@@ -21,7 +21,7 @@
 
 .post {
     width: 10%;
-    transform: translate(43.4rem, 5.6rem);
+    transform: translate(43.6rem, 5.6rem);
 
 
 
@@ -33,15 +33,15 @@
 
 
         .singlepost {
-            height: 30rem;
-            width: 40rem;
+            height: 35rem;
+            width: 38rem;
             row-gap: 10px;
             border-radius: 1.5rem;
             align-items: center;
             background: var(--mm);
             box-shadow: 0 2px 4px rgba(140, 140, 141, 0.549);
             overflow: hidden;
-            border: 0.5px solid var(--mm);
+            border: 2px solid var(--whiteColor);
 
             .postcrtpic {
 
@@ -60,6 +60,7 @@
                 transform: translate(4.6rem, -2.3rem);
                 font-size: 18px;
                 color: var(--whiteColor);
+                font-weight: 600;
             }
 
             .contentdiv {
@@ -67,17 +68,17 @@
                 border-top:1px solid var(--greytext) ;
                 border-bottom:1px solid var(--greytext) ;
                 border-radius:0.11rem ;
-                background-color: white;
+                background-color: var(mmm);
 
-                height: 22rem;
+                height: 26.7rem;
                 transform: translate(0px, -11px);
 
                 .postpic {
 
                     .imgb {
-                        height: 16rem;
-                        width: 25rem;
-                        transform: translate(7.5rem, 3rem);
+                        height: 24.5rem;
+                        width: 39.9rem;
+                        transform: translate(rem, 3rem);
 
                     }
 
@@ -86,11 +87,12 @@
 
                 .desc {
                     font-size: 17px;
-                    color: var(--textColor);
-                    font-weight: 500;
+                    color: var(--whiteColor);
+                    font-weight: 400;
                     padding-left: 1.5rem;
                     padding-right: 1.5rem;
                     padding-top: 0.5rem;
+                    
 
 
                 }
@@ -100,6 +102,7 @@
                 align-items: center;
                 justify-content: center;
                 flex-direction: row;
+                
 
             .postbtns{
                 border-radius:50rem;
@@ -122,7 +125,7 @@
                 .postico2{color: var(--whiteColor);
                     font-size: 25px;
                     &:hover{
-                        color: var(--mmy);
+                        color: var(--PrimaryColor);
                     }}
               
             }
